crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__rename_builder_io.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.ts ==
import { qrl } from "@qwik.dev/core";
import { $, component$ } from "@qwik.dev/core";
import { isDev } from "@qwik.dev/core/build";
import { stuff } from "@qwik.dev/router";
import { moreStuff } from "@qwik.dev/router/more/here";
import { qwikify$ } from "@qwik.dev/react";
import sdk from "@builder.io/sdk";
const q__u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export const Foo = qwikify$(MyReactComponent);
export const Bar = $("a thing");
export const App = /*#__PURE__*/ componentQrl(q__u6BtPnK76q4);

============================= test.tsx__u6BtPnK76q4.ts (ENTRY POINT) ==
import { isDev } from "@qwik.dev/core/build";
import { moreStuff } from "@qwik.dev/router/more/here";
import { default as sdk } from "@builder.io/sdk";
import { stuff } from "@qwik.dev/router";
export const _u6BtPnK76q4 = () => {
	sdk.hello();
	if (isDev) {
		stuff();
	} else {
		moreStuff();
	}
	return "hi";
};

/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    413,
    529
  ]
}
*/
== DIAGNOSTICS ==
[]
