crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__root_level_self_referential_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
// Root-level self-referential component
// The QRL should NOT be hoisted before the component function is defined
// or should use two-phase emission to avoid forward reference
export const Tree = /*#__PURE__*/ componentQrl(q__u6BtPnK76q4);

============================= test.tsx__u6BtPnK76q4.tsx (ENTRY POINT) ==
import { Tree } from "./test";
export const _u6BtPnK76q4 = (props) => {
	return (
		<div>
			{props.label}
			{props.children && props.children.map((child) => <Tree {...child} />)}
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    245,
    393
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
