crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__root_level_self_referential_qrl_inline.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= ./node_modules/qwik-tree/index.qwik.js ==
import { _noopQrlDEV } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
const q__ziH4q1QHsFs = /* @__PURE__ */ _noopQrlDEV("_ziH4q1QHsFs");
q__ziH4q1QHsFs.s((props) => {
	return _jsxSorted("div", null, null, [props.label, props.children && props.children.map((child) => _jsxSplit(Tree, { ...child }, null, null, 1, "0"))], 1, null);
});
// Root-level self-referential component
// The QRL should NOT be hoisted before the component function is defined
// or should use two-phase emission to avoid forward reference
export const Tree = componentQrl(q__ziH4q1QHsFs);
== DIAGNOSTICS ==
[]
