crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_convert_jsx_events.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const ManyEventsComponent = qrl(() => import("./test.tsx_ManyEventsComponent_component_ndbrzxiyG3g"), "ManyEventsComponent_component_ndbrzxiyG3g");

============================= test.tsx_ManyEventsComponent_component_ndbrzxiyG3g.js (ENTRY POINT) ==
export const ManyEventsComponent_component_ndbrzxiyG3g = () => {
			return (
				<div>
					<button
						onClick$={() => {}}
						onDblClick$={() => {}}
					>
						click
					</button>
					<button
						onClick$={() => {}}
						onBlur$={() => {}}
						on-anotherCustom$={() => {}}
						document:onFocus$={() => {}}
						window:onClick$={() => {}}
					>
						click
					</button>
				</div>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_ndbrzxiyG3g",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component",
  "hash": "ndbrzxiyG3g",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_ndbrzxiyG3g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    444
  ]
}
*/
== DIAGNOSTICS ==
[]
