crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_convert_rest_props.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /* @__PURE__ */ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export default componentQrl(q__u6BtPnK76q4);
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { _restProps } from "@qwik.dev/core";
import { useTask$ } from "@qwik.dev/core";
export const _u6BtPnK76q4 = ({ ...props }) => {
	useTask$(() => {
		props.checked;
	});
	return "hi";
};

/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    75,
    171
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
============================= test.tsx_component_ZUK1E201Ins.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const component_ZUK1E201Ins = () => {
	const props = _captures[0];
	props.checked;
};

/*
{
  "origin": "test.tsx",
  "name": "component_ZUK1E201Ins",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "js",
  "parent": "_u6BtPnK76q4",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "props"
  ],
  "loc": [
    113,
    151
  ]
}
*/
== DIAGNOSTICS ==
[]
