crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_destructure_args.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
// the count results in _fnSignal because of the rename
// would be nice to consider it a prop too
export default qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { _restProps } from "@qwik.dev/core";
export const _u6BtPnK76q4 = ({ message, id, count: c, ...rest }: Record<string, any>) => {
			const _ref = {};
			_ref.renders = useStore({ _ref.renders: 0 }, { reactive: false });
			const { renders } = _ref;
			renders.renders++;
			const rerenders = renders.renders + 0;
			return (
				<div id={id}>
					<span {...rest}>
					{message} {c}
					</span>
					<div class="renders">{rerenders}</div>
				</div>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    169,
    525
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==
[]
