crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_extract_single_qrl_2.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useStore, useSignal } from "@qwik.dev/core";
const q_Parent_component_0TaiDayHrlo = /*#__PURE__*/ qrl(() => import("./test.tsx_Parent_component_0TaiDayHrlo"), "Parent_component_0TaiDayHrlo");
const Parent = /*#__PURE__*/ componentQrl(q_Parent_component_0TaiDayHrlo);

============================= test.tsx_Parent_component_0TaiDayHrlo.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const Parent_component_0TaiDayHrlo = () => {
      const cart = useStore<Cart>([]);
      const results = useSignal(['foo', 'bar']);

      return (
        <div>
          <button id="first" onClick$={() => (results.value = ['item1', 'item2'])}></button>

          {results.value.map((item, key) => (
            <button
              id={'second-' + key}
              onClick$={() => {
                cart.push(item);
              }}
            >
              {item}
            </button>
          ))}
          <ul>
            {cart.map((item) => (
              <li>
                <span>{item}</span>
              </li>
            ))}
          </ul>
        </div>
      );
    };
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    762
  ]
}
*/
== DIAGNOSTICS ==
[]
